--- a/Pages/By Category/toddler.html
+++ b/Pages/By Category/toddler.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="/Design & Layout/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <title>Toddler</title>
 </head>
-<body class="faq">
+<body>
     <nav class="navigation"> 
         <ul class="soc-med_links"> <!--Social Media Links-->
             <li><a href="https://www.amazon.ae/" target="_blank"><img src="/Media/Images/amazon.png"></a></li>
@@ -23,51 +23,21 @@
         </ul>
     </nav>
 
-    <main class="main-faq">
-        <section class="text-filter">
-            <div class="faq-frame">
-                <h3>Frequently Asked Questions</h3>
-                <article class="answered-qs">
-                    <div class="question"><h4>Why is sustainability important to LITTLE?</h4></div>
-                    <div class="answer"><p>It is easy to argue that our company is relatively small compared to the ever growing plastic 
-                        toy manufacturing companies, but LITTLE does not equate to nothing and we believe that small steps can lead to 
-                        big changes. We continue to strive for sustainability to be a part of those impactful small changes, hence we 
-                        place much value and importance of our cause. </p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>What makes LITTLE's products sustainable?</h4></div>
-                    <div class="answer"><p>Our products are made from fallen or dead trees that are already intended to be burned. 
-                        Allowing us to operate with minimal environmental impact and with reduced cost and waste.
-                    </p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>Where can I buy LITTLE products?</h4></div>
-                    <div class="answer"><p>We are proudly affiliated with many fundraising organizations and companies that are working towards the 
-                        same cause as we are.
-                        Check out our <a href="/Pages/cart.html">Affiliates Page</a> in the Cart icon to find LITTLE Toy Store near you.</p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>Does LITTLE ship internationally?</h4></div>
-                    <div class="answer"><p>We proudly say that LITTLE is now available for shipping internationally however we are only able to ship 
-                        according to the product's availability</p></div>
-                </article>
-                <section class="email-frame">
-                    <h3>We'd Love to Hear from You</h3>
-                    <p>Email Us: ask@little.com</p>
-                    <ul class="soc-med_links"> <!--Social Media Links-->
-                        <li><a href="https://www.amazon.ae/" target="_blank"><img src="/Media/Images/amazon.png"></a></li>
-                        <li><a href="https://www.etsy.com/" target="_blank"><img src="/Media/Images/etsy.png"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/Media/Images/facebook.png"></a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/Media/Images/instagram.png"></a></li>
-                        <li><a href="https://twitter.com/?lang=en" target="_blank"><img src="/Media/Images/twitterx.png"></a></li>
-                    </ul>
-                </section>
-            </div>
+    <main class="products">
+        <section class="types">
+            <h2>Blocks</h2>
+            <div class="prod-img" id="prod-three"></div>
         </section>
-        <!--VIDEO WILL PLAY IN THE BACKGROUND OF THE TEXT-->
-        <video src="/Media/Videos/pexels-rodnae-productions-8083516 (1080p).mp4" loop autoplay></video> 
+        <section class="types">
+            <h2>Wooden Dinos</h2>
+            <div class="prod-img" id="prod-four"></div>
+        </section>
+        <section class="types">
+            <h2>Number Sorting</h2>
+            <div class="prod-img" id="prod-five"></div>
+        </section>
     </main>
-    
+
     <footer>
         <section class="footer-links">
             <section id="logo">
@@ -116,7 +86,5 @@
         <hr>
         <p id="copyright">Copyright &copy;2023 Little by Rujeth Tanchico</p>
     </footer>
-
-    <script src="/Design & Layout/faq.js"></script>
 </body>
 </html>
