--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="/Design & Layout/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <title>About LITTLE</title>
 </head>
-<body class="faq">
+<body>
     <nav class="navigation"> 
         <ul class="soc-med_links"> <!--Social Media Links-->
             <li><a href="https://www.amazon.ae/" target="_blank"><img src="/Media/Images/amazon.png"></a></li>
@@ -23,49 +23,22 @@
         </ul>
     </nav>
 
-    <main class="main-faq">
-        <section class="text-filter">
-            <div class="faq-frame">
-                <h3>Frequently Asked Questions</h3>
-                <article class="answered-qs">
-                    <div class="question"><h4>Why is sustainability important to LITTLE?</h4></div>
-                    <div class="answer"><p>It is easy to argue that our company is relatively small compared to the ever growing plastic 
-                        toy manufacturing companies, but LITTLE does not equate to nothing and we believe that small steps can lead to 
-                        big changes. We continue to strive for sustainability to be a part of those impactful small changes, hence we 
-                        place much value and importance of our cause. </p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>What makes LITTLE's products sustainable?</h4></div>
-                    <div class="answer"><p>Our products are made from fallen or dead trees that are already intended to be burned. 
-                        Allowing us to operate with minimal environmental impact and with reduced cost and waste.
-                    </p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>Where can I buy LITTLE products?</h4></div>
-                    <div class="answer"><p>We are proudly affiliated with many fundraising organizations and companies that are working towards the 
-                        same cause as we are.
-                        Check out our <a href="/Pages/cart.html">Affiliates Page</a> in the Cart icon to find LITTLE Toy Store near you.</p></div>
-                </article>
-                <article class="answered-qs">
-                    <div class="question"><h4>Does LITTLE ship internationally?</h4></div>
-                    <div class="answer"><p>We proudly say that LITTLE is now available for shipping internationally however we are only able to ship 
-                        according to the product's availability</p></div>
-                </article>
-                <section class="email-frame">
-                    <h3>We'd Love to Hear from You</h3>
-                    <p>Email Us: ask@little.com</p>
-                    <ul class="soc-med_links"> <!--Social Media Links-->
-                        <li><a href="https://www.amazon.ae/" target="_blank"><img src="/Media/Images/amazon.png"></a></li>
-                        <li><a href="https://www.etsy.com/" target="_blank"><img src="/Media/Images/etsy.png"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/Media/Images/facebook.png"></a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/Media/Images/instagram.png"></a></li>
-                        <li><a href="https://twitter.com/?lang=en" target="_blank"><img src="/Media/Images/twitterx.png"></a></li>
-                    </ul>
-                </section>
+    <main class="main-about">
+        <section class="text-filter-about">
+            <div class="about-frame">
+                <p>Established in August 2003, LITTLE is currently named one of the leading companies for sustainable children's toys. 
+                    LITTLE has always had one specific goal ever since its inception, "To hone knowledge and imagination without damaging 
+                    the future".<br><br>
+                    With an understanding of the importance of child's play on each one's growth we strive to make products 
+                    that are intended to grow with your children. Part of that understanding is accepting the fact that toys are easily 
+                    disposable to families and are not necessarily kept forever, which is why our products are made with recycled dead and 
+                    fallen trees, which are biodegradeable materials. This ensures that when you do decide to get rid of your LITTLE product 
+                    it does not harm nature.<br><br>
+                    All proceeds from our customers' purchases are donated to organizations that support the cause and live by sustainability. 
+                    For more information on the matter <a href="/Pages/cart.html">Visit the Basket page</a> to see all our affiliates.<br>
+                    If you have personal questions, feel free to reach out and talk to us. <a href="/Pages/faq.html">Visit the FAQ page.</a></p>
             </div>
         </section>
-        <!--VIDEO WILL PLAY IN THE BACKGROUND OF THE TEXT-->
-        <video src="/Media/Videos/pexels-rodnae-productions-8083516 (1080p).mp4" loop autoplay></video> 
     </main>
     
     <footer>
@@ -116,7 +89,5 @@
         <hr>
         <p id="copyright">Copyright &copy;2023 Little by Rujeth Tanchico</p>
     </footer>
-
-    <script src="/Design & Layout/faq.js"></script>
 </body>
 </html>
