--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </section>
         <section class="prod-gallery">
             <aside class="link-images">
-                <div class="prod-link img1"><a href="/Pages/By Category/inf&baby.html"><p>Infants</p></a></div>
-                <div class="prod-link img2"><a href="/Pages/By Category/inf&baby.html"><p>Babies</p></a></div>
+                <div class="prod-link img1"><a href="/Pages/By Category/inf_baby.html"><p>Infants</p></a></div>
+                <div class="prod-link img2"><a href="/Pages/By Category/inf_baby.html"><p>Babies</p></a></div>
                 <div class="prod-link img3"><a href="/Pages/By Category/toddler.html"><p>Toddlers</p></a></div>
-                <div class="prod-link img4"><a href="/Pages/By Category/prek&kg.html"><p>Pre-K</p></a></div>
-                <div class="prod-link img5"><a href="/Pages/By Category/prek&kg.html"><p>Kindergarten</p></a></div>
+                <div class="prod-link img4"><a href="/Pages/By Category/prek_kg.html"><p>Pre-K</p></a></div>
+                <div class="prod-link img5"><a href="/Pages/By Category/prek_kg.html"><p>Kindergarten</p></a></div>
             </aside>
             <video src="/Media/Videos/production_id_4628687 (720p).mp4" loop autoplay></video>
         </section>
@@ -73,7 +73,7 @@
                         We ensure that all our affiliates have our best interest at heart and that our company's 
                         goals and aims have been communicated to them clearly, to guarantee that we are able to work 
                         together towards our goal to sustainability. 
-                        <a href="/Pages/cart.html">Visit the Cart Page</a>
+                        <a href="/Pages/cart.html">Find Us Near You, Visit the Basket Page</a>
                     </p>
                 </aside>
                 <aside><img class="where-img" src="/Media/Images/pexels-ivan-samkov-8504295.jpg"></aside>
